--- a/_modules/polyclonal/plot.html
+++ b/_modules/polyclonal/plot.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.plot &#8212; polyclonal 6.6 documentation</title>
+    <title>polyclonal.plot &#8212; polyclonal 6.7 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -502,6 +502,7 @@
     <span class="n">heatmap_negative_color</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">heatmap_color_scheme</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">heatmap_color_scheme_mid_0</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
+    <span class="n">heatmap_lims_from_slider_init</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span>
     <span class="n">heatmap_max_at_least</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">heatmap_min_at_least</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
     <span class="n">heatmap_max_fixed</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
@@ -573,6 +574,11 @@
 <span class="sd">        rather than `category_colors` and `heatmap_negative_color`.</span>
 <span class="sd">    heatmap_color_scheme_mid_0 : bool</span>
 <span class="sd">        Set the heatmap color scheme so the domain mid is zero.</span>
+<span class="sd">    heatmap_lims_from_slider_init : bool</span>
+<span class="sd">        Do we set the heatmap limits to span just the range of values that are</span>
+<span class="sd">        shown given the initial values for any sliders in `addtl_slider_stats`, or</span>
+<span class="sd">        do we include all values including ones that might be filtered or hidden</span>
+<span class="sd">        by the initial slider values.</span>
 <span class="sd">    heatmap_max_at_least : None or float</span>
 <span class="sd">        Make heatmap color max at least this large.</span>
 <span class="sd">    heatmap_min_at_least : None or float</span>
@@ -646,12 +652,6 @@
     <span class="c1"># filter `data_df` by any minimums in `slider_binding_range_kwargs`</span>
     <span class="k">if</span> <span class="n">slider_binding_range_kwargs</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">slider_binding_range_kwargs</span> <span class="o">=</span> <span class="p">{}</span>
-    <span class="k">for</span> <span class="n">col</span><span class="p">,</span> <span class="n">col_kwargs</span> <span class="ow">in</span> <span class="n">slider_binding_range_kwargs</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-        <span class="k">if</span> <span class="s2">&quot;min&quot;</span> <span class="ow">in</span> <span class="n">col_kwargs</span><span class="p">:</span>
-            <span class="n">data_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span>
-                <span class="p">(</span><span class="n">data_df</span><span class="p">[</span><span class="n">col</span><span class="p">]</span> <span class="o">&gt;=</span> <span class="n">col_kwargs</span><span class="p">[</span><span class="s2">&quot;min&quot;</span><span class="p">])</span>
-                <span class="o">|</span> <span class="p">(</span><span class="n">data_df</span><span class="p">[</span><span class="s2">&quot;wildtype&quot;</span><span class="p">]</span> <span class="o">==</span> <span class="n">data_df</span><span class="p">[</span><span class="s2">&quot;mutant&quot;</span><span class="p">])</span>
-            <span class="p">]</span>
 
     <span class="n">categories</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span><span class="n">category_col</span><span class="p">]</span><span class="o">.</span><span class="n">unique</span><span class="p">()</span><span class="o">.</span><span class="n">tolist</span><span class="p">()</span>
     <span class="n">show_category_label</span> <span class="o">=</span> <span class="n">show_single_category_label</span> <span class="ow">or</span> <span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">categories</span><span class="p">)</span> <span class="o">&gt;</span> <span class="mi">1</span><span class="p">)</span>
@@ -671,7 +671,7 @@
             <span class="p">[</span><span class="n">data_df</span><span class="p">[</span><span class="n">c</span><span class="p">]</span><span class="o">.</span><span class="n">notnull</span><span class="p">()</span> <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">,</span> <span class="s2">&quot;mutant&quot;</span><span class="p">,</span> <span class="n">category_col</span><span class="p">]],</span>
         <span class="p">)</span>
     <span class="p">]</span>
-    <span class="c1"># not defined for one of the stats or one of the hiding columns</span>
+    <span class="c1"># not defined for at least one of the stats or one of the hiding columns</span>
     <span class="n">data_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span>
         <span class="n">functools</span><span class="o">.</span><span class="n">reduce</span><span class="p">(</span>
             <span class="n">operator</span><span class="o">.</span><span class="n">or_</span><span class="p">,</span>
@@ -723,12 +723,20 @@
     <span class="p">]</span>
 
     <span class="c1"># make floor at zero selection, setting floor to either 0 or min in data (no floor)</span>
-    <span class="n">min_stat</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span><span class="o">.</span><span class="n">min</span><span class="p">()</span>  <span class="c1"># used as min in heatmap when not flooring at 0</span>
+    <span class="k">if</span> <span class="n">heatmap_lims_from_slider_init</span><span class="p">:</span>
+        <span class="n">df_for_lims</span> <span class="o">=</span> <span class="n">data_df</span><span class="o">.</span><span class="n">copy</span><span class="p">()</span>
+        <span class="k">for</span> <span class="n">slider_stat</span><span class="p">,</span> <span class="n">init_stat</span> <span class="ow">in</span> <span class="n">addtl_slider_stats</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+            <span class="k">if</span> <span class="n">init_stat</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
+                <span class="n">df_for_lims</span> <span class="o">=</span> <span class="n">df_for_lims</span><span class="p">[</span><span class="n">df_for_lims</span><span class="p">[</span><span class="n">slider_stat</span><span class="p">]</span> <span class="o">&gt;=</span> <span class="n">init_stat</span><span class="p">]</span>
+        <span class="n">min_stat</span> <span class="o">=</span> <span class="n">df_for_lims</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span><span class="o">.</span><span class="n">min</span><span class="p">()</span>
+        <span class="n">max_stat</span> <span class="o">=</span> <span class="n">df_for_lims</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span><span class="o">.</span><span class="n">max</span><span class="p">()</span>
+    <span class="k">else</span><span class="p">:</span>
+        <span class="n">min_stat</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span><span class="o">.</span><span class="n">min</span><span class="p">()</span>
+        <span class="n">max_stat</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span><span class="o">.</span><span class="n">max</span><span class="p">()</span>  <span class="c1"># used as max in heatmap</span>
     <span class="k">if</span> <span class="n">heatmap_min_at_least</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">min_stat</span> <span class="o">=</span> <span class="nb">min</span><span class="p">(</span><span class="n">min_stat</span><span class="p">,</span> <span class="n">heatmap_min_at_least</span><span class="p">)</span>
     <span class="k">if</span> <span class="n">heatmap_min_fixed</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">min_stat</span> <span class="o">=</span> <span class="n">heatmap_min_fixed</span>
-    <span class="n">max_stat</span> <span class="o">=</span> <span class="n">data_df</span><span class="p">[</span><span class="n">stat_col</span><span class="p">]</span><span class="o">.</span><span class="n">max</span><span class="p">()</span>  <span class="c1"># used as max in heatmap</span>
     <span class="k">if</span> <span class="n">heatmap_max_at_least</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
         <span class="n">max_stat</span> <span class="o">=</span> <span class="nb">max</span><span class="p">(</span><span class="n">max_stat</span><span class="p">,</span> <span class="n">heatmap_max_at_least</span><span class="p">)</span>
     <span class="k">if</span> <span class="n">heatmap_max_fixed</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
