--- a/_modules/polyclonal/polyclonal.html
+++ b/_modules/polyclonal/polyclonal.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>polyclonal.polyclonal &#8212; polyclonal 6.6 documentation</title>
+    <title>polyclonal.polyclonal &#8212; polyclonal 6.7 documentation</title>
     <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/plot_directive.css" />
@@ -2730,9 +2730,6 @@
             <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;addtl_tooltip_stats&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;addtl_tooltip_stats&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">icXX_col</span><span class="p">)</span>
 
-        <span class="k">if</span> <span class="s2">&quot;init_floor_at_zero&quot;</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">kwargs</span><span class="p">:</span>
-            <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;init_floor_at_zero&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="kc">False</span>
-
         <span class="k">if</span> <span class="s2">&quot;heatmap_min_at_least&quot;</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">kwargs</span><span class="p">:</span>
             <span class="n">kwargs</span><span class="p">[</span><span class="s2">&quot;heatmap_min_at_least&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="o">-</span><span class="mi">2</span>
         <span class="k">if</span> <span class="s2">&quot;heatmap_max_at_least&quot;</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">kwargs</span><span class="p">:</span>
@@ -2761,6 +2758,7 @@
         <span class="k">if</span> <span class="n">df_to_merge</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
             <span class="k">return</span> <span class="n">data_df</span>
         <span class="k">else</span><span class="p">:</span>
+            <span class="n">site_to_wt</span> <span class="o">=</span> <span class="n">data_df</span><span class="o">.</span><span class="n">set_index</span><span class="p">(</span><span class="s2">&quot;site&quot;</span><span class="p">)[</span><span class="s2">&quot;wildtype&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">to_dict</span><span class="p">()</span>
             <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">df_to_merge</span><span class="p">,</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">):</span>
                 <span class="n">df_to_merge</span> <span class="o">=</span> <span class="p">[</span><span class="n">df_to_merge</span><span class="p">]</span>
             <span class="k">elif</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">df_to_merge</span><span class="p">,</span> <span class="nb">list</span><span class="p">):</span>
@@ -2773,12 +2771,24 @@
                     <span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span>
                         <span class="p">[</span><span class="n">df</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="n">epitope</span><span class="o">=</span><span class="n">e</span><span class="p">)</span> <span class="k">for</span> <span class="n">e</span> <span class="ow">in</span> <span class="n">data_df</span><span class="p">[</span><span class="s2">&quot;epitope&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">unique</span><span class="p">()]</span>
                     <span class="p">)</span>
+                <span class="k">if</span> <span class="s2">&quot;wildtype&quot;</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">df</span><span class="o">.</span><span class="n">columns</span><span class="p">:</span>
+                    <span class="n">df</span> <span class="o">=</span> <span class="n">df</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span><span class="n">wildtype</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">map</span><span class="p">(</span><span class="n">site_to_wt</span><span class="p">))</span>
+                <span class="k">else</span><span class="p">:</span>
+                    <span class="n">mapped_wt</span> <span class="o">=</span> <span class="n">df</span><span class="p">[</span><span class="s2">&quot;site&quot;</span><span class="p">]</span><span class="o">.</span><span class="n">map</span><span class="p">(</span><span class="n">site_to_wt</span><span class="p">)</span>
+                    <span class="n">wt_mismatches</span> <span class="o">=</span> <span class="p">(</span><span class="n">mapped_wt</span> <span class="o">!=</span> <span class="n">df</span><span class="p">[</span><span class="s2">&quot;wildtype&quot;</span><span class="p">])</span> <span class="o">&amp;</span> <span class="n">mapped_wt</span><span class="o">.</span><span class="n">notnull</span><span class="p">()</span>
+                    <span class="k">if</span> <span class="nb">any</span><span class="p">(</span><span class="n">wt_mismatches</span><span class="p">):</span>
+                        <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
+                            <span class="s2">&quot;wildtype mismatches</span><span class="se">\n</span><span class="s2">&quot;</span>
+                            <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="n">df</span><span class="p">[</span><span class="n">wt_mismatches</span><span class="p">])</span>
+                            <span class="o">+</span> <span class="s2">&quot;</span><span class="se">\n</span><span class="s2">&quot;</span>
+                            <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="n">data_df</span><span class="p">[</span><span class="n">wt_mismatches</span><span class="p">])</span>
+                        <span class="p">)</span>
                 <span class="n">shared_cols</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">data_df</span><span class="o">.</span><span class="n">columns</span><span class="p">)</span><span class="o">.</span><span class="n">intersection</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">columns</span><span class="p">)</span>
                 <span class="k">if</span> <span class="ow">not</span> <span class="n">shared_cols</span><span class="o">.</span><span class="n">issubset</span><span class="p">(</span><span class="n">mergeable_cols</span><span class="p">):</span>
                     <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
                         <span class="sa">f</span><span class="s2">&quot;Entry </span><span class="si">{</span><span class="n">i_df</span><span class="si">}</span><span class="s2"> in `df_to_merge` has the following columns &quot;</span>
-                        <span class="s2">&quot;shared with the `data_df`:</span><span class="se">\n</span><span class="si">{shared_cols}</span><span class="se">\n\n</span><span class="s2">Remove shared &quot;</span>
-                        <span class="s2">&quot;columns other than:</span><span class="se">\n</span><span class="si">{mergeable_cols}</span><span class="s2">&quot;</span>
+                        <span class="sa">f</span><span class="s2">&quot;shared with the `data_df`:</span><span class="se">\n</span><span class="si">{</span><span class="n">shared_cols</span><span class="si">}</span><span class="se">\n\n</span><span class="s2">Remove shared &quot;</span>
+                        <span class="sa">f</span><span class="s2">&quot;columns other than:</span><span class="se">\n</span><span class="si">{</span><span class="n">mergeable_cols</span><span class="si">}</span><span class="s2">&quot;</span>
                     <span class="p">)</span>
                 <span class="n">data_df</span> <span class="o">=</span> <span class="n">data_df</span><span class="o">.</span><span class="n">merge</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">how</span><span class="o">=</span><span class="s2">&quot;outer&quot;</span><span class="p">,</span> <span class="n">validate</span><span class="o">=</span><span class="s2">&quot;many_to_one&quot;</span><span class="p">)</span>
             <span class="k">return</span> <span class="n">data_df</span>
